--- a/Tut3_TicTacToe/Tut3_TicTacToe.vcxproj.filters
+++ b/Tut3_TicTacToe/Tut3_TicTacToe.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="TicTacToe.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
