--- a/Tut3_TicTacToe/Tut3_TicTacToe.vcxproj
+++ b/Tut3_TicTacToe/Tut3_TicTacToe.vcxproj
@@ -81,6 +81,7 @@
     <ClInclude Include="TicTacToe.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="TestFunction.cpp" />
     <ClCompile Include="TicTacToe.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
