--- a/Tut3_TicTacToe/Tut3_TicTacToe.vcxproj.filters
+++ b/Tut3_TicTacToe/Tut3_TicTacToe.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClCompile Include="TicTacToe.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TestFunction.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
